tests/tables/fails/parser/unexpected_tokens2.tbl
# CHECK: fails/parser/unexpected_tokens2.tbl(4,11): error: Expected =, got table
# CHECK: table foo table = []
# CHECK:           ^~~~~
table foo table = []
